<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medtime.MedicineAdding" >

    <TextView
        android:id="@+id/lbl_Medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nameMed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txt_MedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_Medicine"
        android:layout_below="@+id/lbl_Medicine"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_addMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="51dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/lbl_dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_MedName"
        android:layout_below="@+id/txt_MedName"
        android:layout_marginTop="32dp"
        android:text="@string/dosage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txt_dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_dosage"
        android:layout_below="@+id/lbl_dosage"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lbl_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl_Medicine"
        android:layout_centerVertical="true"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_time"
        android:layout_below="@+id/lbl_time"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="time" />

</RelativeLayout>
